[package]
name = "critter"
version = "0.1.6"
edition = "2021"
homepage = "https://github.com/Mlemix/critter"
repository = "https://github.com/Mlemix/critter"
documentation = "https://github.com/Mlemix/critter/blob/main/README.md"
description = "A light rust library to interact with the Twitter V2 api."
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
keywords = [ "twitter", "api", "wrapper", "api-wrapper" ]

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rust-crypto = "0.2.36"
base64 = "0.21.2"
urlencoding = "2.1.2"
rand = "0.8"
infer = "0.13.0"